work on better security policy, support habanero desktop machine as host as well